EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==02/15/2009==
KLS: SoF - Item movement and bag support.
AndMetal: Augments are now visible when linking items.
Trevius: SoF - Adjusted the new Item Structure to align more fields
Trevius: SoF - Added OP_Consume and OP_LootRequest opcodes

==02/14/2009==
Derision: SoF - New struct for OP_ExpansionInfo
Derision: SoF - Character Creation now works.
Derision: SoF - support now compiled in by default.
Derision: Small changes to compile SoF under Windows
KLS: SoF - initial inventory load.
KLS: Change to streams, streams will now initialize to an unestablished state instead of closed.  Prevents a race condition that would cause the client to hang on identification.
Trevius: SoF - Identified most or all needed fields in the illusion struct for future use.
WildcardX: Made Perl v5.10 the default for WIN32 compiles.
WildcardX: (Angelox) Added many header declarations to make gcc v4.3 happy.

==02/13/2009==
WildcardX: Compatibility for Perl 5.10. WIN32 compiles will still need to rename perl58.lib to perl510.lib.

==02/12/2009==
Trevius: Identified the Size, Eye Color and Texture fields in the SoF spawn structure.
Trevius: Added multiple Opcodes for SoF

==02/12/2009==
cavedude00: Added #findzone (#fz) command to aid in getting a zone's short_name or id.
cavedude00: #peqzone now accepts both short_name and zoneidnumber.

==02/09/2009==
Angelox: Bots:Added command '#bot corpse summon' for Necromancer.

==02/08/2009==
Trevius: Corrected Z Coordinate on clientupdates in SoF.  All Client and NPC positition structures should now be accurate
Trevius: Corrected the Object structure in SoF.  Objects should now all load in the correct location and size.
Trevius: Added a few new Opcodes for SoF.
Trevius: Corrected the Opcode for OP_RequestClientZoneChange - Zoning is now fully functional including zone commands

==02/07/2009==