@@ -5,6 +5,11 @@ KLS: SoF - Item movement and bag support.
 AndMetal: Augments are now visible when linking items.
 Trevius: SoF - Adjusted the new Item Structure to align more fields
 Trevius: SoF - Added OP_Consume and OP_LootRequest opcodes
+cavedude00: (AndMetal) AAs now use skill_id instead of index for prereqs.
+cavedude00: (demonstar55) Implemented Improved Instrument Mastery, Improved Singing Mastery, and Echo of Taelosia AAs.
+cavedude00: Created Combat:ChanceToHitDivideBy rule and increased default value to 1250.
+
+Required and Optional SQL: utils/sql/svn/326_aas.sql
 
 ==02/14/2009==
 Derision: SoF - New struct for OP_ExpansionInfo
